<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:meuApp="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/principal"
        android:title="@string/principal">
    </item>

    <item
        android:id="@+id/cardapio"
        android:title="@string/itens_do_cardapio">
    </item>

    <item
        android:id="@+id/mesa"
        android:title="@string/mesas">
    </item>

    <item
        android:id="@+id/cartao"
        android:title="@string/cartoes">
        </item>

    <item
        android:id="@+id/categorias"
        android:title="@string/categorias">
    </item>

    <item
        android:id="@+id/novoPedido"
        android:title="@string/novo_pedido">
    </item>

    <item
        android:id="@+id/act_cancelar_pedido"
        android:title="@string/cancelar_pedido">
    </item>

    <item
        android:id="@+id/login"
        android:title="@string/login">
    </item>

</menu>