<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundPrincipal"
    android:orientation="vertical">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="1dp"
    android:paddingRight="1dp"
    android:paddingTop="1dp"
    android:paddingBottom="1dp"
    android:background="@color/colorBackgroundPrincipal"
    tools:context="br.com.wp.comanda.PrincipalActivity">

    <include android:id="@+id/tool"
        layout="@layout/toolbar" />

    <Button
        android:id="@+id/sincronizar_dados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/textSize_button_sincronizarDados"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:text="@string/text_button_sincronizar_dados"/>

    <Button
        android:text="@string/text_button_pesquisar_pedidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pesquisar"
        android:textStyle="bold"
        android:textSize="@dimen/textSize_button_pesquizarPedidos"
        android:layout_below="@+id/sincronizar_dados"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp" />

    <Button
        android:id="@+id/novoPedido"
        android:text="@string/text_button_iniciar_novo_pedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:textStyle="bold"
        android:textSize="@dimen/textSize_button_novoPedido"
        android:layout_below="@+id/pesquisar"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
</ScrollView>