<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/colorTextList"
            android:textSize="@dimen/textSize_lista"
            android:text="@string/string_nome_item" />

        <TextView
            android:id="@+id/tvNomeItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize_lista"
            android:textColor="@color/colorTextList"
            android:layout_weight="5"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextList"
            android:textSize="@dimen/textSize_lista"
            android:layout_weight="2"
            android:text="@string/string_valor" />

        <TextView
            android:id="@+id/tvValor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextList"
            android:textSize="@dimen/textSize_lista"
            android:layout_weight="5"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextList"
            android:textSize="@dimen/textSize_lista"
            android:layout_weight="2"
            android:text="@string/string_disponivel" />

        <TextView
            android:id="@+id/tvDisponivel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextList"
            android:textSize="@dimen/textSize_lista"
            android:layout_weight="5"
            android:text="" />
    </LinearLayout>

</LinearLayout>